--- a/trunk/QLNS/Presentation.csproj
+++ b/trunk/QLNS/Presentation.csproj
@@ -115,6 +115,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DanhSachSach.resx">
       <DependentUpon>DanhSachSach.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="HoaDonBanSach.resx">
       <DependentUpon>HoaDonBanSach.cs</DependentUpon>
@@ -135,6 +136,10 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThayDoiThamSo.resx">
+      <DependentUpon>ThayDoiThamSo.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UngHo.resx">
@@ -190,6 +195,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QLNSDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ThayDoiThamSo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThayDoiThamSo.Designer.cs">
+      <DependentUpon>ThayDoiThamSo.cs</DependentUpon>
     </Compile>
     <Compile Include="UngHo.cs">
       <SubType>Form</SubType>
